--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "vuexy-react-admin-dashboard",
   "version": "9.0.0",
+  
   "private": true,
+  "homepage": "/admin-panel",
   "dependencies": {
     "@casl/ability": "^6.3.2",
     "@casl/react": "^3.1.0",
